# particles

./: CMakeLists.txt  README.txt  main.cpp
sources/: Core.h
sources/component/: Color.cpp  Color.h  IComponent.h  Position.cpp  Position.h  Velocity.cpp  Velocity.h
sources/entity/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
